Fix title + adjust celebration spacing
- Fix title to be aligned along the left edge
- Center when the target has been reached
- Add a new line to the celebration message

--- a/web/countdown.css
+++ b/web/countdown.css
@@ -112,7 +112,12 @@ a:visited {
     white-space: nowrap;
     height: 24px;
     width: 100%;
+    margin-left: 48px;
+}
+
+.countdown-reached .countdown-title {
     text-align: center;
+    margin-left: 0px;
 }
 
 .countdown-title-container {
@@ -149,7 +154,8 @@ a:visited {
 
 .countdown-reached-message {
     text-align: center;
-    margin-bottom: 24px;
+    line-height: 36px;
+    margin-bottom: 12px;
 }
 
 .countdown-reached button {
